cmss/main/default/objects/Consent__c/fields/AllConsent__c.field-meta.xml
<CustomField>
    <fullName>AllConsent__c</fullName>
    <label>All Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>