cmss/main/default/objects/Consent__c/fields/ConsentId__c.field-meta.xml
<CustomField>
    <fullName>ConsentId__c</fullName>
    <label>Consent ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>