cmss/main/default/objects/Consent__c/fields/ConsentSignDate__c.field-meta.xml
<CustomField>
    <fullName>ConsentSignDate__c</fullName>
    <description>Datum podpis souhlasu</description>
    <label>ConsentSignDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>