cmss/main/default/objects/Consent__c/fields/ConsentValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ConsentValidFrom__c</fullName>
    <description>Platnost souhlasu od</description>
    <label>ConsentValidFrom</label>
    <required>true</required>
    <type>Date</type>
</CustomField>