cmss/main/default/objects/Consent__c/fields/ConsentValidTo__c.field-meta.xml
<CustomField>
    <fullName>ConsentValidTo__c</fullName>
    <description>Platnost souhlasu do</description>
    <label>ConsentValidTo</label>
    <required>true</required>
    <type>Date</type>
</CustomField>