cmss/main/default/objects/Consent__c/fields/EmailConsent__c.field-meta.xml
<CustomField>
    <fullName>EmailConsent__c</fullName>
    <description>Souhlas e-mail</description>
    <label>EmailConsent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>