cmss/main/default/objects/Consent__c/fields/EntityConsent__c.field-meta.xml
<CustomField>
    <fullName>EntityConsent__c</fullName>
    <description>Entita souhlasu</description>
    <label>EntityConsent</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ČMSS</fullName>
            </value>
            <value>
                <fullName>ČSOB</fullName>
            </value>
            <value>
                <fullName>ČSOB Asset</fullName>
            </value>
            <value>
                <fullName>ČSOB Group (ALL)</fullName>
            </value>
            <value>
                <fullName>ČSOB leasing</fullName>
            </value>
            <value>
                <fullName>ČSOB penzijní společnost</fullName>
            </value>
            <value>
                <fullName>ČSOB pojišťovna</fullName>
            </value>
            <value>
                <fullName>Hypoteční banka</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Patria Finance</fullName>
            </value>
            <value>
                <fullName>Síť</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>