cmss/main/default/objects/Consent__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>ID souhlasu - externí klíč</description>
    <label>ExternalId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>