cmss/main/default/objects/Consent__c/fields/GeneralConsent__c.field-meta.xml
<CustomField>
    <fullName>GeneralConsent__c</fullName>
    <description>Skupinový souhlas</description>
    <label>GeneralConsent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>