cmss/main/default/objects/Consent__c/fields/GeneralConsentVersion__c.field-meta.xml
<CustomField>
    <fullName>GeneralConsentVersion__c</fullName>
    <description>Skupinový souhlas verze</description>
    <label>General Consent Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>