cmss/main/default/objects/Consent__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>