cmss/main/default/objects/Consent__c/fields/PhoneConsent__c.field-meta.xml
<CustomField>
    <fullName>PhoneConsent__c</fullName>
    <description>Souhals telefon</description>
    <label>PhoneConsent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>