cmss/main/default/objects/Consent__c/fields/PortalConsent__c.field-meta.xml
<CustomField>
    <fullName>PortalConsent__c</fullName>
    <description>Souhlas el. portál</description>
    <label>Portal Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>