cmss/main/default/objects/Consent__c/fields/PostConsent__c.field-meta.xml
<CustomField>
    <fullName>PostConsent__c</fullName>
    <description>Souhlas pošta</description>
    <label>Post Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>