cmss/main/default/objects/Consent__c/fields/SMSConsent__c.field-meta.xml
<CustomField>
    <fullName>SMSConsent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Souhlas SMS</description>
    <label>SMSConsent</label>
    <type>Checkbox</type>
</CustomField>