cmss/main/default/objects/Consent__c/fields/SubstitutePerson__c.field-meta.xml
<CustomField>
    <fullName>SubstitutePerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Substitute Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consents (Substitute Person)</relationshipLabel>
    <relationshipName>SubstitutePerson</relationshipName>
    <type>Lookup</type>
</CustomField>