cmss/main/default/objects/Consent__c/fields/SubstituteRole__c.field-meta.xml
<CustomField>
    <fullName>SubstituteRole__c</fullName>
    <label>Substitute Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>