cmss/main/default/objects/Consent__c/fields/UpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>UpdatedBy__c</fullName>
    <label>Updated By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>