cmss/main/default/objects/Consent__c/validationRules/EntityConsentNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>EntityConsentNotEditable</fullName>
    <active>true</active>
    <description>Some fields are required but not allowed to be changed at record edit</description>
    <errorConditionFormula>$Profile.Name != &apos;IntegrationUser&apos; &amp;&amp; 
NOT(ISNEW()) &amp;&amp;
ISCHANGED(EntityConsent__c)</errorConditionFormula>
    <errorDisplayField>EntityConsent__c</errorDisplayField>
    <errorMessage>This field cannot be edited</errorMessage>
</ValidationRule>