cmss/main/default/objects/Consent__c/validationRules/NameNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>NameNotEditable</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name != &apos;IntegrationUser&apos; &amp;&amp; 
NOT(ISNEW()) &amp;&amp;
ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name__c</errorDisplayField>
    <errorMessage>This field cannot be edited</errorMessage>
</ValidationRule>